# x-workflow

./: .gitignore  README.md  main.py  pyproject.toml  workflow-config.json  workflow_manager.py
.trae111/skills/x-workflow-product-manager/: SKILL.md
controls/: __init__.py  add_prefix.py  add_suffix.py  add_text.py  base_control.py  case_convert.py  json_compress.py  json_format.py  remove_duplicate.py  text_merge.py  text_replace.py  text_search_delete.py  text_split.py
widgets/: __init__.py  arrow_button.py  control_dialog.py  control_panel.py  main_window.py  tab_widget.py  text_editor.py  workflow_dialogs.py
