[project]
name = "x-workflow"
version = "0.1.0"
description = ""
authors = [
    {name = "jtiance"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "pyside6 (>=6.10.2,<7.0.0)",
    "qt-material (>=2.17,<3.0)",
    "pyinstaller (>=6.19.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
